--- a/src/main/resources/ucf/assignments/ToDoList.fxml
+++ b/src/main/resources/ucf/assignments/ToDoList.fxml
@@ -2,62 +2,87 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="442.0" maxWidth="600.0" minHeight="400.0" minWidth="600.0" prefHeight="442.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignments.ToDoListController">
+<AnchorPane minHeight="400.0" minWidth="600.0" prefHeight="442.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignments.ToDoListController">
    <children>
-      <SplitPane dividerPositions="0.06704545454545455, 0.23522727272727273, 0.7988636363636363" maxHeight="442.0" maxWidth="600.0" orientation="VERTICAL" prefHeight="442.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-        <items>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+      <Pane prefHeight="37.0" prefWidth="600.0">
+         <children>
+            <MenuBar fx:id="listMenu" prefHeight="28.0" prefWidth="600.0">
+              <menus>
+                <Menu mnemonicParsing="false" text="File">
+                  <items>
+                        <MenuItem mnemonicParsing="false" onAction="#saveExternallyClicked" text="Save Externally" />
+                        <MenuItem mnemonicParsing="false" onAction="#loadListClicked" text="Load List" />
+                    <MenuItem mnemonicParsing="false" text="Close" />
+                  </items>
+                </Menu>
+                  <Menu mnemonicParsing="false" text="Edit">
+                    <items>
+                      <MenuItem mnemonicParsing="false" onAction="#clearAllClicked" text="Clear All" />
+                    </items>
+                  </Menu>
+                  <Menu mnemonicParsing="false" text="View">
+                    <items>
+                      <MenuItem mnemonicParsing="false" onAction="#viewCompleteTasksClicked" text="Complete" />
+                        <MenuItem mnemonicParsing="false" onAction="#viewRemainingClicked" text="Incomplete" />
+                    </items>
+                  </Menu>
+                <Menu mnemonicParsing="false" text="Home">
+                     <items>
+                        <MenuItem mnemonicParsing="false" onAction="#homeClicked" text="Back to Menu" />
+                     </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Help">
+                  <items>
+                    <MenuItem mnemonicParsing="false" onAction="#aboutClicked" text="About" />
+                  </items>
+                </Menu>
+              </menus>
+            </MenuBar>
+         </children>
+      </Pane>
+      <Pane layoutY="50.0" prefHeight="337.0" prefWidth="600.0">
+         <children>
+            <HBox alignment="CENTER" layoutY="-25.0" minHeight="10.0" minWidth="10.0" prefHeight="51.0" prefWidth="600.0" spacing="10.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#homeClicked" prefHeight="26.0" prefWidth="91.0" text="Home" />
-                  <ComboBox prefWidth="150.0" />
-                  <Button mnemonicParsing="false" onAction="#saveExternallyClicked" prefHeight="26.0" text="Save Externally" />
-                  <Button mnemonicParsing="false" onAction="#createNewList" text="New" />
+                  <Label alignment="CENTER" text="To Do List" textFill="#d8127c">
+                     <font>
+                        <Font name="Baghdad Regular" size="41.0" />
+                     </font>
+                     <padding>
+                        <Insets left="100.0" right="140.0" />
+                     </padding>
+                  </Label>
                </children>
             </HBox>
-            <TextField prefHeight="46.0" prefWidth="598.0" promptText="Title" SplitPane.resizableWithParent="false">
-               <padding>
-                  <Insets top="50.0" />
-               </padding>
-            </TextField>
-            <TableView prefHeight="270.0" prefWidth="559.0">
+            <TableView fx:id="tableView" layoutY="34.0" prefHeight="302.0" prefWidth="600.0">
               <columns>
-                  <TableColumn fx:id="statusColumn" maxWidth="151.0" minWidth="0.0" prefWidth="64.0" text="Status" />
+                  <TableColumn fx:id="statusColumn" maxWidth="151.0" minWidth="0.0" prefWidth="64.0" styleClass="background.css" text="Complete" />
                 <TableColumn fx:id="dateColumn" minWidth="0.0" prefWidth="183.0" text="Date" />
                 <TableColumn fx:id="itemColumn" maxWidth="266.0" prefWidth="191.0" text="Item" />
                   <TableColumn fx:id="descriptionColumn" maxWidth="243.0" minWidth="0.0" prefWidth="167.0" text="Description" />
               </columns>
             </TableView>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="1.0" prefWidth="598.0">
-               <children>
-                  <HBox layoutX="31.0" layoutY="12.0" prefHeight="42.0" prefWidth="489.0" spacing="10.0">
-                     <children>
-                        <DatePicker prefHeight="25.0" prefWidth="146.0" promptText="Due Date" />
-                        <TextField prefHeight="26.0" prefWidth="159.5" promptText="Item" />
-                        <TextField prefHeight="26.0" prefWidth="159.5" promptText="Description" />
-                     </children>
-                  </HBox>
-                  <ButtonBar layoutX="-9.0" layoutY="43.0" prefHeight="40.0" prefWidth="600.0">
-                     <buttons>
-                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#viewRemainingClicked" prefHeight="26.0" text="View Remaining" />
-                        <Button mnemonicParsing="false" onAction="#viewCompleteTasksClicked" prefHeight="26.0" prefWidth="139.0" text="View Complete" />
-                        <Button mnemonicParsing="false" onAction="#deleteListClicked" text="Delete List" />
-                        <Button minWidth="33.0" mnemonicParsing="false" onAction="#deleteTaskClicked" prefHeight="5.0" prefWidth="214.0" text="Delete Task" />
-                     </buttons>
-                  </ButtonBar>
-                  <Button layoutX="520.0" layoutY="12.0" mnemonicParsing="false" onAction="#addTaskClicked" prefHeight="26.0" prefWidth="61.0" text="Add" />
-               </children>
-            </AnchorPane>
-        </items>
-      </SplitPane>
+         </children>
+      </Pane>
+      <Pane layoutY="391.0" prefHeight="51.0" prefWidth="600.0">
+         <children>
+            <DatePicker layoutX="20.0" layoutY="13.0" promptText="Date" />
+            <TextField fx:id="description" layoutX="380.0" layoutY="13.0" promptText="Description" />
+            <TextField fx:id="item" layoutX="212.0" layoutY="13.0" promptText="Item" />
+            <Button layoutX="546.0" layoutY="13.0" mnemonicParsing="false" onAction="#addTaskClicked" text="Add" />
+         </children></Pane>
    </children>
 </AnchorPane>
