--- a/src/main/resources/ucf/assignments/ToDoList.fxml
+++ b/src/main/resources/ucf/assignments/ToDoList.fxml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
@@ -30,6 +29,7 @@
                 </Menu>
                   <Menu mnemonicParsing="false" text="Edit">
                     <items>
+                        <MenuItem mnemonicParsing="false" onAction="#deleteClicked" text="Delete" />
                       <MenuItem mnemonicParsing="false" onAction="#clearAllClicked" text="Clear All" />
                     </items>
                   </Menu>
@@ -37,6 +37,7 @@
                     <items>
                       <MenuItem mnemonicParsing="false" onAction="#viewCompleteTasksClicked" text="Complete" />
                         <MenuItem mnemonicParsing="false" onAction="#viewRemainingClicked" text="Incomplete" />
+                        <MenuItem mnemonicParsing="false" onAction="#viewAllClicked" text="All" />
                     </items>
                   </Menu>
                 <Menu mnemonicParsing="false" text="Help">
@@ -65,18 +66,20 @@
             <TableView fx:id="tableView" layoutY="34.0" prefHeight="302.0" prefWidth="600.0">
               <columns>
                   <TableColumn fx:id="statusColumn" maxWidth="151.0" minWidth="0.0" prefWidth="64.0" styleClass="background.css" text="Complete" />
-                <TableColumn fx:id="dateColumn" minWidth="0.0" prefWidth="183.0" text="Date" />
-                <TableColumn fx:id="itemColumn" maxWidth="266.0" prefWidth="191.0" text="Item" />
-                  <TableColumn fx:id="descriptionColumn" maxWidth="243.0" minWidth="0.0" prefWidth="167.0" text="Description" />
+                <TableColumn fx:id="dateColumn" minWidth="0.0" onEditCommit="#changeDateCellEvent" prefWidth="183.0" text="Date" />
+                <TableColumn fx:id="itemColumn" maxWidth="266.0" onEditCommit="#changeItemCellEvent" prefWidth="191.0" text="Item" />
+                  <TableColumn fx:id="descriptionColumn" maxWidth="243.0" minWidth="0.0" onEditCommit="#changeDescriptionCellEvent" prefWidth="167.0" text="Description">
+                     <graphic>
+                     </graphic></TableColumn>
               </columns>
             </TableView>
          </children>
       </Pane>
       <Pane layoutY="391.0" prefHeight="51.0" prefWidth="600.0">
          <children>
-            <DatePicker layoutX="20.0" layoutY="13.0" promptText="Date" />
-            <TextField fx:id="description" layoutX="380.0" layoutY="13.0" promptText="Description" />
-            <TextField fx:id="item" layoutX="212.0" layoutY="13.0" promptText="Item" />
+            <DatePicker fx:id="dateTextField" layoutX="20.0" layoutY="13.0" promptText="Date" />
+            <TextField fx:id="descriptionTextField" layoutX="380.0" layoutY="13.0" promptText="Description" />
+            <TextField fx:id="itemTextField" layoutX="212.0" layoutY="13.0" promptText="Item" />
             <Button layoutX="546.0" layoutY="13.0" mnemonicParsing="false" onAction="#addTaskClicked" text="Add" />
          </children></Pane>
    </children>
