--- a/src/main/resources/ucf/assignments/ToDoList.fxml
+++ b/src/main/resources/ucf/assignments/ToDoList.fxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
@@ -9,22 +10,23 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="400.0" minWidth="600.0" prefHeight="442.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignments.ToDoListController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignments.ToDoListController">
    <children>
       <Pane prefHeight="37.0" prefWidth="600.0">
          <children>
-            <MenuBar fx:id="listMenu" prefHeight="28.0" prefWidth="600.0">
+            <MenuBar fx:id="listMenu" prefHeight="28.0" prefWidth="640.0">
               <menus>
                 <Menu mnemonicParsing="false" text="File">
                   <items>
                         <MenuItem mnemonicParsing="false" onAction="#saveExternallyClicked" text="Save Externally" />
                         <MenuItem mnemonicParsing="false" onAction="#loadListClicked" text="Load List" />
-                    <MenuItem mnemonicParsing="false" text="Close" />
                   </items>
                 </Menu>
                   <Menu mnemonicParsing="false" text="Edit">
@@ -35,6 +37,7 @@
                   </Menu>
                   <Menu mnemonicParsing="false" text="View">
                     <items>
+                        <MenuItem mnemonicParsing="false" onAction="#viewDescriptionClicked" text="Full Description" />
                       <MenuItem mnemonicParsing="false" onAction="#viewCompleteTasksClicked" text="Complete" />
                         <MenuItem mnemonicParsing="false" onAction="#viewRemainingClicked" text="Incomplete" />
                         <MenuItem mnemonicParsing="false" onAction="#viewAllClicked" text="All" />
@@ -49,11 +52,16 @@
             </MenuBar>
          </children>
       </Pane>
-      <Pane layoutY="50.0" prefHeight="337.0" prefWidth="600.0">
+      <Pane layoutY="50.0" prefHeight="349.0" prefWidth="640.0">
          <children>
-            <HBox alignment="CENTER" layoutY="-25.0" minHeight="10.0" minWidth="10.0" prefHeight="51.0" prefWidth="600.0" spacing="10.0">
+            <HBox alignment="CENTER" layoutX="15.0" layoutY="-25.0" minHeight="10.0" minWidth="10.0" prefHeight="51.0" prefWidth="608.0" spacing="10.0">
                <children>
-                  <Label alignment="CENTER" text="To Do List" textFill="#d8127c">
+                  <ImageView fitHeight="51.0" fitWidth="51.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@pinkCheck.png" />
+                     </image>
+                  </ImageView>
+                  <Label alignment="CENTER" prefHeight="72.0" prefWidth="587.0" text="To Do List" textFill="#d8127c">
                      <font>
                         <Font name="Baghdad Regular" size="41.0" />
                      </font>
@@ -61,25 +69,24 @@
                         <Insets left="100.0" right="140.0" />
                      </padding>
                   </Label>
+                  <HBox prefHeight="51.0" prefWidth="55.0" />
                </children>
             </HBox>
-            <TableView fx:id="tableView" layoutY="34.0" prefHeight="302.0" prefWidth="600.0">
+            <TableView fx:id="tableView" layoutY="34.0" prefHeight="316.0" prefWidth="640.0">
               <columns>
-                  <TableColumn fx:id="statusColumn" maxWidth="151.0" minWidth="0.0" prefWidth="64.0" styleClass="background.css" text="Complete" />
-                <TableColumn fx:id="dateColumn" minWidth="0.0" onEditCommit="#changeDateCellEvent" prefWidth="183.0" text="Date" />
-                <TableColumn fx:id="itemColumn" maxWidth="266.0" onEditCommit="#changeItemCellEvent" prefWidth="191.0" text="Item" />
-                  <TableColumn fx:id="descriptionColumn" maxWidth="243.0" minWidth="0.0" onEditCommit="#changeDescriptionCellEvent" prefWidth="167.0" text="Description">
+                  <TableColumn fx:id="statusColumn" maxWidth="151.0" minWidth="0.0" prefWidth="64.0" text="Status" />
+                <TableColumn fx:id="dateColumn" minWidth="0.0" onEditCommit="#changeDateCellEvent" prefWidth="132.0" text="Date" />
+                  <TableColumn fx:id="descriptionColumn" maxWidth="443.0" minWidth="0.0" onEditCommit="#changeDescriptionCellEvent" prefWidth="443.0" text="Description">
                      <graphic>
                      </graphic></TableColumn>
               </columns>
             </TableView>
          </children>
       </Pane>
-      <Pane layoutY="391.0" prefHeight="51.0" prefWidth="600.0">
+      <Pane layoutX="20.0" layoutY="415.0" prefHeight="51.0" prefWidth="600.0">
          <children>
             <DatePicker fx:id="dateTextField" layoutX="20.0" layoutY="13.0" promptText="Date" />
-            <TextField fx:id="descriptionTextField" layoutX="380.0" layoutY="13.0" promptText="Description" />
-            <TextField fx:id="itemTextField" layoutX="212.0" layoutY="13.0" promptText="Item" />
+            <TextField fx:id="descriptionTextField" layoutX="224.0" layoutY="13.0" prefHeight="26.0" prefWidth="315.0" promptText="Description" />
             <Button layoutX="546.0" layoutY="13.0" mnemonicParsing="false" onAction="#addTaskClicked" text="Add" />
          </children></Pane>
    </children>
