--- a/src/main/resources/ucf/assignments/ToDoList.fxml
+++ b/src/main/resources/ucf/assignments/ToDoList.fxml
@@ -17,15 +17,15 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignments.ToDoListController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignments.ToDoListController">
    <children>
-      <Pane prefHeight="37.0" prefWidth="600.0">
+      <Pane prefHeight="37.0" prefWidth="757.0">
          <children>
-            <MenuBar fx:id="listMenu" prefHeight="28.0" prefWidth="640.0">
+            <MenuBar fx:id="listMenu" prefHeight="28.0" prefWidth="910.0">
               <menus>
                 <Menu mnemonicParsing="false" text="File">
                   <items>
-                        <MenuItem mnemonicParsing="false" onAction="#saveExternallyClicked" text="Save Externally" />
+                        <MenuItem fx:id="saveExternally" mnemonicParsing="false" onAction="#saveExternallyClicked" text="Save Externally" />
                         <MenuItem mnemonicParsing="false" onAction="#loadListClicked" text="Load List" />
                   </items>
                 </Menu>
@@ -37,24 +37,19 @@
                   </Menu>
                   <Menu mnemonicParsing="false" text="View">
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#viewDescriptionClicked" text="Full Description" />
                       <MenuItem mnemonicParsing="false" onAction="#viewCompleteTasksClicked" text="Complete" />
                         <MenuItem mnemonicParsing="false" onAction="#viewRemainingClicked" text="Incomplete" />
                         <MenuItem mnemonicParsing="false" onAction="#viewAllClicked" text="All" />
                     </items>
                   </Menu>
-                <Menu mnemonicParsing="false" text="Help">
-                  <items>
-                    <MenuItem mnemonicParsing="false" onAction="#aboutClicked" text="About" />
-                  </items>
-                </Menu>
+
               </menus>
             </MenuBar>
          </children>
       </Pane>
-      <Pane layoutY="50.0" prefHeight="349.0" prefWidth="640.0">
+      <Pane layoutY="50.0" prefHeight="480.0" prefWidth="900.0">
          <children>
-            <HBox alignment="CENTER" layoutX="15.0" layoutY="-25.0" minHeight="10.0" minWidth="10.0" prefHeight="51.0" prefWidth="608.0" spacing="10.0">
+            <HBox alignment="CENTER" layoutX="15.0" layoutY="-25.0" minHeight="10.0" minWidth="10.0" prefHeight="51.0" prefWidth="816.0" spacing="10.0">
                <children>
                   <ImageView fitHeight="51.0" fitWidth="51.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -72,18 +67,18 @@
                   <HBox prefHeight="51.0" prefWidth="55.0" />
                </children>
             </HBox>
-            <TableView fx:id="tableView" layoutY="34.0" prefHeight="316.0" prefWidth="640.0">
+            <TableView fx:id="tableView" layoutY="34.0" prefHeight="446.0" prefWidth="900.0">
               <columns>
-                  <TableColumn fx:id="statusColumn" maxWidth="151.0" minWidth="0.0" prefWidth="64.0" text="Status" />
-                <TableColumn fx:id="dateColumn" minWidth="0.0" onEditCommit="#changeDateCellEvent" prefWidth="132.0" text="Date" />
-                  <TableColumn fx:id="descriptionColumn" maxWidth="443.0" minWidth="0.0" onEditCommit="#changeDescriptionCellEvent" prefWidth="443.0" text="Description">
+                  <TableColumn fx:id="statusColumn" maxWidth="151.0" minWidth="0.0" prefWidth="72.0" text="Status" />
+                <TableColumn fx:id="dateColumn" minWidth="0.0" onEditCommit="#changeDateCellEvent" prefWidth="123.0" text="Date" />
+                  <TableColumn fx:id="descriptionColumn" maxWidth="761.0" minWidth="0.0" onEditCommit="#changeDescriptionCellEvent" prefWidth="704.0" text="Description">
                      <graphic>
                      </graphic></TableColumn>
               </columns>
             </TableView>
          </children>
       </Pane>
-      <Pane layoutX="20.0" layoutY="415.0" prefHeight="51.0" prefWidth="600.0">
+      <Pane layoutX="150.0" layoutY="535.0" prefHeight="51.0" prefWidth="600.0">
          <children>
             <DatePicker fx:id="dateTextField" layoutX="20.0" layoutY="13.0" promptText="Date" />
             <TextField fx:id="descriptionTextField" layoutX="224.0" layoutY="13.0" prefHeight="26.0" prefWidth="315.0" promptText="Description" />
